Fix tab wrapping. Add fretboard panel base

--- a/css/sass/_fretboard.scss
+++ b/css/sass/_fretboard.scss
@@ -1,3 +1,30 @@
 @use "sass:color";
 @use "variables" as *;
 
+$fret-width: 350px;
+
+.input-panel {
+
+    display: flex;
+    flex-direction: column;
+    
+    height: 100%;
+    padding: 30px;
+    border-radius: 40px 40px 0 0;
+
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(51,51,51,1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(51,51,51,1) 100%);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(51,51,51,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#333333",GradientType=1);
+
+    .actions-container {
+        // TO BE STYLED
+        display: none;
+    }
+
+    .fretboard {
+        
+    }
+
+}
