--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600&display=swap");
 .tab-container {
   display: flex;
+  flex-wrap: wrap;
+  height: fit-content;
 }
 .tab-container #tab {
   display: flex;
+  flex-wrap: wrap;
 }
 .tab-container .note-column {
   display: flex;
   flex-direction: column;
   padding: 0 7px;
+  margin-bottom: 1rem;
   cursor: pointer;
 }
 .tab-container .note-column span {
@@ -23,6 +27,7 @@
   width: 1.75rem;
   color: #FFFFFF;
   background-color: #000000;
+  margin-bottom: 1rem;
 }
 .string-label-container div {
   display: flex;
@@ -37,6 +42,21 @@
   background-color: rgba(255, 0, 157, 0.3);
 }
 
+.input-panel {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 30px;
+  border-radius: 40px 40px 0 0;
+  background: rgb(0, 0, 0);
+  background: -moz-linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(51, 51, 51) 100%);
+  background: -webkit-linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(51, 51, 51) 100%);
+  background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(51, 51, 51) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#333333",GradientType=1);
+}
+.input-panel .actions-container {
+  display: none;
+}
 * {
   box-sizing: border-box;
 }
@@ -50,12 +70,28 @@ body {
   width: 100%;
   height: 100%;
   font-family: "League Spartan", sans-serif;
-  padding: 20px calc(15px + 3vw);
+  margin: 0;
+  padding: 40px calc(15px + 3vw) 0;
+}
+
+.layout-container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 350px;
+}
+.layout-container .left-panel {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 h1 {
+  display: block;
   font-size: 2.25rem;
   font-weight: 600;
+  margin: 0;
+  grid-column: -1/1;
 }
 
 /*# sourceMappingURL=style.css.map */
